# rexrov2

rexrov2/: CMakeLists.txt  package.xml
rexrov2_control/rviz/: rexrov2_control.rviz
rexrov2_description/robots/: rexrov2_default.xacro
rexrov2_description/urdf/: rexrov2_sensors.xacro
