<?xml version="1.0"?>
<package format="2">
  <name>rexrov2</name>
  <version>0.0.0</version>
  <description>The rexrov2 metapackage</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="olaya@ece.au.dk">olaya</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rexrov2_control</exec_depend>
  <exec_depend>rexrov2_description</exec_depend>
  <exec_depend>rexrov2_gazebo</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>
  </export>
</package>
